--- a/index.html
+++ b/index.html
@@ -45,11 +45,8 @@
           <span>Safia Hamdy</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Data Scientist and AI Engineer with a passion for turning raw data into intelligent solutions.
-          I specialize in NLP, predictive modeling, and building data-powered tools, pipelines and dashboards.
-          My work blends machine learning, real-time data processing, and intuitive interfaces using Python, Streamlit,
-          Power BI, and Hugging Face. I also build tools for audio transcription, multilingual labeling, and data
-          annotation to support end-to-end AI workflows.
+        <p>
+          A Data Scientist and AI Engineer with a passion for turning raw data into intelligent solutions.
         </p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
